# ChangeLog for media-gfx/xli
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/xli/ChangeLog,v 1.40 2007/07/22 09:48:04 dberkholz Exp $

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; xli-1.17.0-r2.ebuild:
  Drop virtual/x11 references.

*xli-1.17.0-r3 (14 May 2007)

  14 May 2007; Samuli Suominen <drac@gentoo.org> +xli-1.17.0-r3.ebuild:
  Use ecompress to define manpage format. Relative to bug 173522.

  05 Aug 2006; Chris White <chriswhite@gentoo.org> -xli-1.17.0.ebuild,
  -xli-1.17.0-r1.ebuild:
  Security punts for bug #140498.

  25 Jan 2006; Donnie Berkholz <spyderous@gentoo.org>; xli-1.17.0-r2.ebuild:
  (#118583) Add modular X deps.

  20 Nov 2005; Hardave Riar <hardave@gentoo.org> xli-1.17.0-r2.ebuild:
  Stable on mips, bug #108365.

  29 Oct 2005; Bryan Østergaard <kloeri@gentoo.org> xli-1.17.0-r2.ebuild:
  Stable on ia64.

  29 Oct 2005; Michael Hanselmann <hansmi@gentoo.org> xli-1.17.0-r2.ebuild:
  Stable on hppa, ppc. See bug #108365.

  28 Oct 2005; Mark Loeser <halcy0n@gentoo.org> xli-1.17.0-r2.ebuild:
  Stable on x86; bug #108365

  27 Oct 2005; Simon Stelling <blubb@gentoo.org> xli-1.17.0-r2.ebuild:
  stable on amd64 wrt bug 108365

  27 Oct 2005; Brent Baude <ranger@gentoo.org> xli-1.17.0-r2.ebuild:
  Marking xli-1.17.0-r2 ppc64 stable for bug 108635

  27 Oct 2005; Gustavo Zacarias <gustavoz@gentoo.org> xli-1.17.0-r2.ebuild:
  Stable on sparc wrt #108365

  27 Oct 2005; Bryan Østergaard <kloeri@gentoo.org> xli-1.17.0-r2.ebuild:
  Stable on alpha, bug 108365.

  27 Oct 2005; Fabian Groffen <grobian@gentoo.org> xli-1.17.0-r2.ebuild:
  Marked ppc-macos for bug #108365

*xli-1.17.0-r2 (26 Oct 2005)

  26 Oct 2005; Tavis Ormandy <taviso@gentoo.org>
  +files/xli-security-gentoo.diff, +xli-1.17.0-r2.ebuild:
  security fix, #108365

  24 Apr 2005; Markus Rothe <corsair@gentoo.org> xli-1.17.0-r1.ebuild:
  Stable on ppc64
