@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/xloadimage
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/xloadimage/ChangeLog,v 1.40 2007/07/22 04:16:44 omp Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/xloadimage/ChangeLog,v 1.41 2008/01/15 18:37:57 grobian Exp $
+
+  15 Jan 2008; Fabian Groffen <grobian@gentoo.org> xloadimage-4.1-r4.ebuild,
+  xloadimage-4.1-r5.ebuild:
+  Dropped ppc-macos keyword, see you in prefix
 
   22 Jul 2007; David Shakaryan <omp@gentoo.org> xloadimage-4.1-r4.ebuild:
   Remove virtual/x11 from dependencies.
