@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/xli
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/xli/ChangeLog,v 1.40 2007/07/22 09:48:04 dberkholz Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/xli/ChangeLog,v 1.41 2008/01/15 18:33:24 grobian Exp $
+
+  15 Jan 2008; Fabian Groffen <grobian@gentoo.org> xli-1.17.0-r2.ebuild,
+  xli-1.17.0-r3.ebuild:
+  Dropped ppc-macos keyword, see you in prefix
 
   22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; xli-1.17.0-r2.ebuild:
   Drop virtual/x11 references.
